# UbuntYou

./: README.md  install.sh  pyproject.toml
ubuntyou/: cli.py
ubuntyou/core/: module.py
ubuntyou/modules/: apt.py  flatpak.py  gnome.py  pro.py  snaps.py  telemetry.py
