[project]
name = "ubuntyou"
version = "0.1.0"
description = "A de-bullshittifier for Ubuntu that maintains the default look and feel."
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "rich>=12.0.0",
]

[project.scripts]
ubuntyou = "ubuntyou.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
